--- a/one-main/src/_styles/_var.scss
+++ b/one-main/src/_styles/_var.scss
@@ -38,3 +38,4 @@ $errorTextColor: rgba(206, 12, 36, 1);
 $lightBlueBg: #F4F7FC;
 $border : 1px solid $borderColor;
 $buttonBg: #00A39E;
+$buttonHoverBg:#018883;
