--- a/one-main/src/index.pug
+++ b/one-main/src/index.pug
@@ -17,7 +17,7 @@ block content
       h2.mb-3 
         | Fill out the form below to complete your payment.
 
-      form(action="" method="method").max-width-653.p-0
+      form(action="" method="method").max-width-653.p-0.payment-form
         div.col-12.d-p-r-0 
           .form-floating
             input(type="number" name="account-number" id="account-number" placeholder="XXXXXXXX").form-control 
@@ -31,12 +31,12 @@ block content
               .floating-label
                 | Type of Account
               .form-check.form-check-inline.pb-1
-                input(class="form-check-input" type="radio" name="inlineRadioOptions1" id="radioChecking" value="checking")
+                input(class="form-check-input radio" type="radio" name="inlineRadioOptions1" id="radioChecking" value="checking")
                 label( class="form-check-label" for="radioChecking") checking
                 
 
               .form-check.form-check-inline.pb-1
-                input( class="form-check-input" type="radio" name="inlineRadioOptions2" id="debitRadio" value="debit" checked)
+                input( class="form-check-input radio" type="radio" name="inlineRadioOptions2" id="debitRadio" value="debit" checked)
                 label( class="form-check-label" for="debitRadio2") Debit Card
               
 
@@ -105,7 +105,7 @@ block content
                     P.text-center where can I find the CVV number 
                     img(src="/assets/images/cvv.png" alt="cvv image ").img-fluid  
 
-            .col-12.col-md-6.card-feature.d-block.d-lg-none.account-form
+            .col-12.col-md-6.card-feature.d-block.d-lg-none.account-form.hide-mobile
               
                 .row.g-0
                   p.text-center.mb-1 Where can I find the routing and<br/> account number?
@@ -129,9 +129,9 @@ block content
                 .col.d-flex.flex-column.justify-content-center.align-items-center
                   img(src="/assets/images/check.png" alt="Amiculum Digital Logo").img-fluid            
         
-    //- +button({
-    //-   "__class": "my-10",
-    //-   "__text": "Learn More", 
-    //-   "__link": "https://www.npmjs.com/package/generator-yeo",
-    //-   "__target": "_blank"
-    //- })
+    +button({
+      "__class": "mt-3 submit-button",
+      "__text": "MAKE PAYMENT", 
+      "__link": "#",
+      "__target": ""
+    })
