--- a/one-main/src/_styles/main.scss
+++ b/one-main/src/_styles/main.scss
@@ -123,13 +123,13 @@ transform: scale(.85) translateY(-.3rem) translateX(.15rem);
 
 @media only screen and (max-width: $bpTablet) {
   .hide-mobile {
-    display: none;
+    display: none !important;
   }
 }
 
 @media only screen and (min-width: $bpTablet) {
   .hide-desktop {
-    display: none;
+    display: none !important;
   }
 }
 
