--- a/one-main/src/index.pug
+++ b/one-main/src/index.pug
@@ -78,12 +78,12 @@ block content
                 | Name On Card 
 
               div.error-response.px-3.py-1
-                | Card Number is required    
+                | Name on Card is required    
                 
             .container.card-form
               .row.g-0
                 .form-floating.col-md-6.p-0
-                  input(type="number" name="exp-date" id="exp-date" placeholder="XXXXXXXX").form-control.border-sm-bottom-0
+                  input(type="date" name="exp-date" id="exp-date" placeholder="XXXXXXXX").form-control.border-sm-bottom-0
                   label(for="exp-date").form-label.form-label__custom
                     | Expiration Date  
 
@@ -105,7 +105,7 @@ block content
                     P.text-center where can I find the CVV number 
                     img(src="/assets/images/cvv.png" alt="cvv image ").img-fluid  
 
-            .col-12.col-md-6.card-feature.d-block.d-lg-none.account-form.hide-mobile
+            .col-12.col-md-6.card-feature.d-block.d-lg-none.account-form.hidden
               
                 .row.g-0
                   p.text-center.mb-1 Where can I find the routing and<br/> account number?
